# cpp-project-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
